--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="skills-box">
             <p class="skills-title">Database</p>
             <i class="devicon-mysql-plain colored"></i>
-            <i class="devicon-django-plain colored"></i>
+            <i class="devicon-mongodb-plain colored"></i>
           </div>
           </div>  
     </section>
